{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 2008,
  "lineage": "51787ab6-69a2-5c92-72e2-3fe39a737c05",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "hasnain-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:020046395185:loadbalancer/app/hasnain-alb/b0ef2d4f7b3de3c5",
            "arn_suffix": "app/hasnain-alb/b0ef2d4f7b3de3c5",
            "dns_name": "hasnain-alb-1604287065.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:020046395185:loadbalancer/app/hasnain-alb/b0ef2d4f7b3de3c5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "hasnain-alb",
            "security_groups": [
              "sg-0e191367441a14672"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03426489ab26678d7"
              },
              {
                "subnet_id": "subnet-06cedb5c65e91c946"
              }
            ],
            "subnets": [
              "subnet-03426489ab26678d7",
              "subnet-06cedb5c65e91c946"
            ],
            "tags": {
              "Name": "hasnain-alb"
            },
            "vpc_id": "vpc-0404fa68835042ef8",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.wordpress",
            "aws_subnet.hasnain-public_1",
            "aws_subnet.hasnain-public_2",
            "aws_vpc.hasnain_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "frontend-listner-80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:020046395185:listener/app/hasnain-alb/b0ef2d4f7b3de3c5/64bd85e6de9ba5cc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:020046395185:targetgroup/frontend-wordpress/379aff30a7b42ce4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:020046395185:listener/app/hasnain-alb/b0ef2d4f7b3de3c5/64bd85e6de9ba5cc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:020046395185:loadbalancer/app/hasnain-alb/b0ef2d4f7b3de3c5",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.hasnain-alb",
            "aws_alb_target_group.frontend-wordpress",
            "aws_security_group.wordpress",
            "aws_subnet.hasnain-public_1",
            "aws_subnet.hasnain-public_2",
            "aws_vpc.hasnain_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "frontend-wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:020046395185:targetgroup/frontend-wordpress/379aff30a7b42ce4",
            "arn_suffix": "targetgroup/frontend-wordpress/379aff30a7b42ce4",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:020046395185:targetgroup/frontend-wordpress/379aff30a7b42ce4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "frontend-wordpress",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0404fa68835042ef8"
          },
          "dependencies": [
            "aws_vpc.hasnain_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-01f26c2a81d4ad305",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-52-214-43-162.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.214.43.162",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "hasnain_database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-096f43ef67d75e998",
            "arn": "arn:aws:ec2:eu-west-1:020046395185:instance/i-0600f428e3a3d7691",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0600f428e3a3d7691",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "hasnainterraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05565d16362178fc1",
            "private_dns": "ip-10-0-2-160.eu-west-1.compute.internal",
            "private_ip": "10.0.2.160",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08f016a3b35f0eb76",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0308913372828ee00",
            "tags": {
              "Name": "hasnain_database"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-043d9eab1cbbe9248"
            ]
          },
          "dependencies": [
            "aws_security_group.terraform_database",
            "aws_security_group.wordpress",
            "aws_subnet.hasnain_private_1",
            "aws_vpc.hasnain_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hasnainIGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:020046395185:internet-gateway/igw-02cbb9844e1aded9f",
            "id": "igw-02cbb9844e1aded9f",
            "owner_id": "020046395185",
            "tags": {
              "Name": "hasnainIGW"
            },
            "vpc_id": "vpc-0404fa68835042ef8"
          },
          "dependencies": [
            "aws_vpc.hasnain_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01f26c2a81d4ad305",
            "id": "nat-03c33ee076caeb765",
            "network_interface_id": "eni-0f52ba870f6308d31",
            "private_ip": "10.0.1.108",
            "public_ip": "52.214.43.162",
            "subnet_id": "subnet-06cedb5c65e91c946",
            "tags": {
              "Name": "nat_gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_subnet.hasnain-public_1",
            "aws_vpc.hasnain_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "routetb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d70384991b916409",
            "owner_id": "020046395185",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02cbb9844e1aded9f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "routetb"
            },
            "vpc_id": "vpc-0404fa68835042ef8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.hasnainIGW",
            "aws_vpc.hasnain_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "routetb1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02bcd0862ec25c5f5",
            "owner_id": "020046395185",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-03c33ee076caeb765",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "routetb1"
            },
            "vpc_id": "vpc-0404fa68835042ef8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.hasnain-public_1",
            "aws_vpc.hasnain_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "table_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c9152adaaee74eb",
            "route_table_id": "rtb-0d70384991b916409",
            "subnet_id": "subnet-06cedb5c65e91c946"
          },
          "dependencies": [
            "aws_internet_gateway.hasnainIGW",
            "aws_route_table.routetb",
            "aws_subnet.hasnain-public_1",
            "aws_vpc.hasnain_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "table_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3d1869a2d2756e6",
            "route_table_id": "rtb-02bcd0862ec25c5f5",
            "subnet_id": "subnet-0308913372828ee00"
          },
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.routetb1",
            "aws_subnet.hasnain-public_1",
            "aws_subnet.hasnain_private_1",
            "aws_vpc.hasnain_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform_database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:020046395185:security-group/sg-043d9eab1cbbe9248",
            "description": "Allow limited inbound external traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-043d9eab1cbbe9248",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e191367441a14672"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform_database",
            "name_prefix": "",
            "owner_id": "020046395185",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform_database"
            },
            "timeouts": null,
            "vpc_id": "vpc-0404fa68835042ef8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.wordpress",
            "aws_vpc.hasnain_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:020046395185:security-group/sg-0e191367441a14672",
            "description": "Allow limited inbound external traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e191367441a14672",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Incoming",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "wordpress",
            "name_prefix": "",
            "owner_id": "020046395185",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wordpress"
            },
            "timeouts": null,
            "vpc_id": "vpc-0404fa68835042ef8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hasnain_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hasnain-public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:020046395185:subnet/subnet-06cedb5c65e91c946",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-06cedb5c65e91c946",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "020046395185",
            "tags": {
              "Name": "hasnain-public_1"
            },
            "vpc_id": "vpc-0404fa68835042ef8"
          },
          "dependencies": [
            "aws_vpc.hasnain_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hasnain-public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:020046395185:subnet/subnet-03426489ab26678d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-03426489ab26678d7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "020046395185",
            "tags": {
              "Name": "hasnain-public_2"
            },
            "vpc_id": "vpc-0404fa68835042ef8"
          },
          "dependencies": [
            "aws_vpc.hasnain_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hasnain_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:020046395185:subnet/subnet-0308913372828ee00",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0308913372828ee00",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "020046395185",
            "tags": {
              "Name": "hasnain_private_1"
            },
            "vpc_id": "vpc-0404fa68835042ef8"
          },
          "dependencies": [
            "aws_vpc.hasnain_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hasnain_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:020046395185:vpc/vpc-0404fa68835042ef8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01bcdbde3d4536058",
            "default_route_table_id": "rtb-0090745353c305fa6",
            "default_security_group_id": "sg-06ff700cd6df20480",
            "dhcp_options_id": "dopt-913578f7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0404fa68835042ef8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0090745353c305fa6",
            "owner_id": "020046395185",
            "tags": {
              "Name": "hasnain_vpc"
            }
          }
        }
      ]
    }
  ]
}